--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Data Structures, Algorithms, Code Challenges",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "get-challenge": "`which bash` ./code-challenges/bin/get-challenge.sh",
     "test": "jest --verbose --coverage",
     "lint": "eslint '**/*.js'"
@@ -15,6 +16,7 @@
     "eslint": "^7.2.0",
     "jest": "^26.6.3",
     "mustache": "^4.0.1",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "treeify": "^1.1.0"
   }
 }
